Fix gaps on accordion

--- a/frontend/src/styles/Accordion.module.css
+++ b/frontend/src/styles/Accordion.module.css
@@ -183,7 +183,6 @@ svg {
       bottom: auto;
       left: 0;
       padding: 0.6em;
-      gap: 0.3em;
       color: var(--color-theme-foreground);
       transition: background-color 0.2s ease-out;
       transition-property: background-color, color;
@@ -262,7 +261,6 @@ svg {
         text-align: end;
         justify-content: end;
         max-width: 90%;
-        padding: 1em;
         flex-wrap: wrap;
 
         .articleIsOpen & {
